# turplanlegger-fastapi

./: .gitignore  CODEOWNERS  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: azure-deploy.yaml  pr-checks.yml  release.yaml
infrastructure/: main.tf  provider.tf
src/turplanlegger/: __about__.py  exception.py  main.py
src/turplanlegger/config/: config.py
src/turplanlegger/routers/: helpers.py  notes.py  users.py
src/turplanlegger/sql/: crud.py  database.py  models.py  schemas.py
src/turplanlegger/utils/: config.py
tests/: test_cors.py  test_exceptions.py  test_helpers.py  test_notes.py  test_sql.py  test_users.py
